# daoBase

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  MANIFEST.in  README.md  install-windows-deps.ps1  pyproject.toml  setup.py  uninstall-windows-deps.ps1  windows-build.md  wscript
.github/workflows/: main.yml
apps/: daoClock.c  daoCommandFilter.c  daoExampleBuildShm.py  daoLogServer.py  daoRandWriter.c  daoRandWriterSync.c  daoReadWrite.c  daoTimeDiff.c  daoTimeDiffStat.c  wscript_build
build_tools/: lint.py  pkg_tool.py
build_tools/lint_configs/: .clang-format
demos/: daoBaseDemoBuildShm.py  daoBaseStartDemo  daoBaseStopDemo
docs/: Doxyfile
docs/source/: about.rst  api_reference.rst  cite.rst  conf.py  daoComponent.rst  daoHw.rst  daoTools.rst  daoroot_daodata.rst  doubleBuffer.rst  fifo.rst  index.rst  installation_guide.rst  logging.rst  mac_branch.rst  numa.rst  quick_start_guide.rst  shared_memory.rst  state_machine.rst  threads.rst  troubleshooting.rst  tuning_guide.rst
docs/source/_static/: durham_style.css
include/: dao.h  daoBase.h  daoComponent.hpp  daoComponentBase.hpp  daoComponentIfce.hpp  daoComponentStateMachine.hpp  daoComponentUpdateThread.hpp  daoComponentZmqThread.hpp  daoDoubleBuffer.hpp  daoImageStruct.h  daoLog.hpp  daoLog2.hpp  daoLog2_wrapper.hpp  daoNuma.hpp  daoShm.h  daoShm.hpp  daoShmIfce.hpp  daoSignalTable.hpp  daoThread.hpp  daoThreadBase.hpp  daoThreadIfce.hpp  daoThreadSafeQueue.hpp  daoThreadTable.hpp
proto/: CMakeLists.txt  daoCommand.proto  daoEvent.proto  daoFileServer.proto  daoLogging.proto  wscript_build
python/: shmlib.py
scripts/: daoDbStartRedisMaster  daoDbStartRedisSlave  daoDbStopRedisMaster  daoDbStopRedisSlave
src/: CMakeLists.txt  daoBase.c  wscript_build
src/c/: dao.c  daoBase.c  daoShm.c
src/cpp/: daoComponent.cpp  daoLog2.cpp  daoLog2_wrapper.cpp  daoNuma.cpp  main.cpp  send_stream.cpp
src/julia/: README  dao.jl
src/matlab/: README  daoShm.m  daomex.c  daomex.mex
src/python/: dao.py  daoComponent.py  daoComponentStateMachine.py  daoLog.py  daoProxy.py  daoShm.py  receiveLogs.py  sendLogs.py  shmlib.py
src/python/dao/: __init__.py  daoComponent.py  daoComponentStateMachine.py  daoDb.py  daoDoubleBuffer.py  daoEvent.py  daoLog.py  daoProxy.py  daoShm.py
src/rust/: Cargo.toml  build.rs  wrapper.h
templates/: dao.env  daoLogServer.conf  daoLogServer.service
test/: daoBaseTestEvent.py  daoLogTest.c  daoLogTest2.c  daoShmBenchmark.c  daoShmGPUTest.c  daoTestComponent.cpp  testCreate.c  test_component.cpp  test_cppInterface.cpp  test_dao_julia.jl  test_log.cpp  test_numa.cpp  test_proxyClient.py  test_proxyClientMirrorGUI.py  test_proxyMirror.py  test_queue.cpp  test_semaphore_registry.cpp  test_semaphore_registry.py  test_shm.cpp  test_shm_ifce.cpp  test_thread_block.cpp  test_threads.cpp  test_update_thread.cpp  wscript_build
